--- a/src/index.html
+++ b/src/index.html
@@ -5,6 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Birds near me</title>
     <link rel="stylesheet" href="./style.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link href="https://fonts.googleapis.com/css2?family=Climate+Crisis&family=Inter+Tight:ital,wght@0,400;0,500;1,300&display=swap" rel="stylesheet">
   </head>
   <body>
     <div id="modal"></div>
